gitops-repo/kubernetes/apps/app-service-prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-service
  namespace: web-apps
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-service
  template:
    metadata:
      labels:
        app: app-service
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: his-main-ng-service
      containers:
      - name: app-service
        image: 278584440977.dkr.ecr.ap-northeast-2.amazonaws.com/web-service/app-image:placeholder
        ports:
        - containerPort: 8082
        resources:
          requests: { cpu: "100m", memory: "128Mi" }
          limits:   { cpu: "500m", memory: "256Mi" }
        readinessProbe:
          httpGet: { path: /, port: 8082 }
          initialDelaySeconds: 5
          timeoutSeconds: 3
          periodSeconds: 10
