gitops-repo/kubernetes/apps/app-service-prod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: app-service-route
  namespace: app-service-prod
spec:
  parentRefs:
  - name: app-service-gateway # 위에서 만든 Gateway를 바라봄
  hostnames:
  - "prod.your-domain.com"    # 실제 상용 도메인
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: app-service-prod  # 배포된 상용 앱의 Service 이름
      port: 80
